<resources>
    <string name="app_name">TechHaus</string>
    <string name="icon_to_be_displayed">Icon To Be Displayed</string>
    <string name="Favorites">Favorites</string>
    <string name="Alarms">Alarms</string>
    <string name="Alarm">Alarm</string>
    <string name="Lamps">Lamps</string>
    <string name="Lamp">Lamp</string>
    <string name="Blinds">Blinds</string>
    <string name="Blind">Blind</string>
    <string name="Doors">Doors</string>
    <string name="Door">Door</string>
    <string name="AC">AC</string>
    <string name="ACs">ACs</string>
    <string name="Refrigerators">Refrigerators</string>
    <string name="Refrigerator">Refrigerator</string>
    <string name="Ovens">Ovens</string>
    <string name="Oven">Oven</string>
    <string name="Devices">Devices</string>
    <string name="Notifications">Notifications</string>
    <string name="Routines">Routines</string>
    <string name="Tasks">Tasks   </string>
    <string name="Loading">Loading...</string>
    <string name="WasPlayed"> was played</string>
    <string name="Status">Status</string>
    <string name="ChangeCode">Change Code</string>
    <string name="Disarm">Disarm</string>
    <string name="Code">Code</string>
    <string name="NewCode">New Code</string>
    <string name="OldCode">Old Code</string>
    <string name="Cancel">Cancel</string>
    <string name="EnterCode">Enter Code</string>
    <string name="CodeUpdated">Code updated</string>
    <string name="CodeIncorrect">Incorrect old code</string>
    <string name="CodeInvalid">Invalid format for new code</string>
    <string name="AlreadyDisarmed">Alarm already disarmed</string>
    <string name="AlreadyAway">Alarm already in armAway mode</string>
    <string name="AlreadyStay">Alarm already in armStay mode</string>
    <string name="TempAtMax">Temperature is at maximum value</string>
    <string name="TempAtMin">Temperature is at minimum value</string>
    <string name="Mode">Mode</string>
    <string name="Temperature">Temperature</string>
    <string name="FanSpeed">Fan Speed</string>
    <string name="VSwing">Vertical Swing</string>
    <string name="HSwing">Horizontal Swing</string>
    <string name="TurnedOn">Turned on</string>
    <string name="TurnedOff">Turned off</string>
    <string name="Fav">Fave</string>
    <string name="Down">Down</string>
    <string name="Up">Up</string>
    <string name="Closed">Closed</string>
    <string name="Open">Open</string>
    <string name="Locked">Locked</string>
    <string name="Unlocked">Unlocked</string>
    <string name="Lock">Lock</string>
    <string name="DoorClosedFirst">Door must be closed first</string>
    <string name="DoorUnlockedFirst">Door must be unlocked first</string>
    <string name="Brightness">Brightness</string>
    <string name="ChangeColor">Change Color</string>
    <string name="Heat">Heat</string>
    <string name="Grill">Grill</string>
    <string name="Convection">Convection</string>
    <string name="FreezerTemp">Freezer Temperature</string>
    <string name="FTempAtMax">Freezer temperature is at maximum value</string>
    <string name="FTempAtMin">Freezer temperature is at minimum value</string>
    <string name="Play">Play</string>
    <string name="ChooseColor">Choose Color</string>
    <string name="Green">Green</string>
    <string name="Red">Red</string>
    <string name="Yellow">Yellow</string>
    <string name="Blue">Blue</string>
    <string name="White">White</string>
    <string name="Violet">Violet</string>
    <string name="Pink">Pink</string>
    <string name="Orange">Orange</string>
    <string name="MustChoose">"You must choose a color!"</string>
    <string name="Help">"Help"</string>
    <string name="Settings">"Settings"</string>
    <string name="NewStatus">"New status:"</string>
    <string name="ClearAll">"Clear all"</string>
    <string name="no_data">"No notifications"</string>
    <string name="no_routines">"No routines"</string>
    <string name="no_devices">"No devices for this category"</string>
    <string name="SelectVerticalSwing">"Select Vertical Swing"</string>
    <string name="SelectHorizontalSwing">"Select Horizontal Swing"</string>
    <string name="SelectFanSpeed">"Select Fan Speed"</string>
    <string name="SelectMode">"Select Mode"</string>
    <string name="SelectHeatMode">"Select Heat Mode"</string>
    <string name="SelectGrillMode">"Select Grill Mode"</string>
    <string name="SelectConvectionMode">"Select Convection Mode"</string>
    <string name="BlueN">"Blue"</string>
    <string name="GreenN">"Green"</string>
    <string name="VioletN">"Violet"</string>
    <string name="PinkN">"Pink"</string>
    <string name="YellowN">"Yellow"</string>
    <string name="RedN">"Red"</string>
    <string name="OrangeN">"Orange"</string>
    <string name="WhiteN">"White"</string>
    <string name="Update">"Update"</string>
    <string name="Refresh">"Refresh"</string>
    <string name="Help1">"When you first open the app, you will be in the "Devices" category"</string>
    <string name="Help2">"On the bottom of the screen you can permanently find the three main categories of the app: "Devices", "Notifications" and "Routines""</string>
    <string name="Help3">"The category you are currently in is highlighted in blue, while the inactive ones are in grey"</string>
    <string name="Help4">"In "Devices" you will find the different device categories. To find a specific device, enter the device's category and it will appear in the category's list of devices"</string>
    <string name="Help5">"In "Notifications" you will find a list of your recent notifications. Every time a device changes its state, you will get notified. You can change your notification preferences on the "Settings" section"</string>
    <string name="Help6">"In "Routines" you will find a list of your saved routines. You can play a routine from the list or access its tasks by clicking on the routine"</string>
    <string name="Help7">"To access the "Help" or "Settings" sections, click on the three dots on the top right corner of the "Devices", "Notifications" or "Routines" categories"</string>
    <string name="Help8">"To perform an action on a device, first go to the "Devices" section"</string>
    <string name="Help9">"Select the category of the device you want to perform an action on"</string>
    <string name="Help10">"Find the device on the category's device list and click on it"</string>
    <string name="Help11">"All the device's functionalities will be displayed. To change a functionality click on the icon or word on the right side of the screen"</string>
    <string name="Help12">"To fave a device, go to the "Devices" category"</string>
    <string name="Help13">"Select the category of the device you want to fave"</string>
    <string name="Help14">"Find the device you want to fave in the category's list, and click on the heart button on the right of the device's name. You can unfave the device likewise"</string>
    <string name="Help15">"You can also access your favorite devices through the "Favorites" category in "Devices""</string>
    <string name="Help16">"To play a routine, first go to the "Routines" section"</string>
    <string name="Help17">"Find the routine you want to play and click the "Play" icon on the right of the routine's name"</string>
    <string name="Help18">"A message will be displayed notifying that the routine was played"</string>
    <string name="Help19">"If you want to see the routine's details, click on the desired routine from the list"</string>
    <string name="Help20">"You can also play a routine from the routine details screen by clicking on the "Play" icon at the top right corner of the screen"</string>
    <string name="Help21">"To see your recent notifications, go to the "Notifications" category"</string>
    <string name="Help22">"There, you will see a list of your notifications. Each notification represents a change on the status of one of your devices. Notifications are sent to you automatically"</string>
    <string name="Help23">"To delete one of your notifications, click on the "Trash" icon on the right of the notification"</string>
    <string name="Help24">"To delete all of your notifications, click on the button "Clear All" at the top of the list"</string>
    <string name="GetKnow">Getting to know the app</string>
    <string name="PerAct">Performing actions on a device</string>
    <string name="FavDev">Faving a device</string>
    <string name="PlayRout">Playing a routine</string>
    <string name="Managing">Managing your notifications</string>
    <string name="DevForNotif">"Select devices for notifications"</string>


</resources>
