<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_help_item"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#324a5e"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/myToolbarTheme" />

        <TextView
            android:id="@+id/help_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="13dp"
            android:text="Help"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_1"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_1" />

                <TextView
                    android:id="@+id/help_text_1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="32dp"
                    android:layout_weight="1"
                    android:text= "@string/Help1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_2"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_2" />

                <TextView
                    android:id="@+id/help_text_2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text= "@string/Help2" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_3"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_3" />

                <TextView
                    android:id="@+id/help_text_3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="23dp"
                    android:layout_weight="1"
                    android:text="@string/Help3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_4"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_4" />

                <TextView
                    android:id="@+id/help_text_4"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/Help4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_5"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_2" />

                <TextView
                    android:id="@+id/help_text_5"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:text="@string/Help5"
                    android:textAlignment="textStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_6"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_6" />

                <TextView
                    android:id="@+id/help_text_6"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/Help6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image_7"
                    android:layout_width="66dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help_image_7" />

                <TextView
                    android:id="@+id/help_text_7"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text= "@string/Help7" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>