<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#324a5e"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/myToolbarTheme" />


        <TextView
            android:id="@+id/AlarmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp"
            android:text="Nombre de la alarm"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="right"
                    android:layout_marginStart="25sp"
                    android:scaleType="fitXY"
                    android:src="@drawable/alarm" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AlarmState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="25sp"
                    android:text="@string/Status"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110sp"
                    android:layout_marginTop="25sp"
                    android:layout_weight="1"
                    android:text="@string/Loading"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/alarmStatusIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|center|end"
                    android:layout_marginEnd="15sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="12dp"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:paddingRight="3dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/loading" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/passButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ChangeCode"
                    android:theme="@style/PasswordButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ArmStay"
                    android:theme="@style/PasswordButton" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ArmAway"
                    android:theme="@style/PasswordButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Disarm"
                    android:theme="@style/PasswordButton" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/activity_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="me.proft.sandbox.BottomActivity">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemBackground="@color/white"
                app:itemIconTint="@drawable/bottom_nav_colors"
                app:itemTextColor="@drawable/bottom_nav_colors"
                app:menu="@menu/bottom_navigation" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>